# public/docs/openapi.yaml
@@ -119,7 +119,7 @@ paths:
             security: []
     '/api/articles/{article}':
         get:
-            summary: 'Mendapatkan detailt data artikel.'
+            summary: 'Mendapatkan detail data artikel.'
             description: ''
             parameters:
                 -
@@ -267,7 +267,7 @@ paths:
                 in: path
                 name: slug
                 description: ''
-                example: nihil
+                example: nulla
                 required: true
                 schema:
                     type: string
@@ -503,6 +503,35 @@ paths:
                 required: true
                 schema:
                     type: integer
+    /api/check-in:
+        get:
+            summary: 'Check in hari ini.'
+            description: ''
+            parameters:
+                -
+                    in: header
+                    name: Authorization
+                    description: ''
+                    example: 'Bearer {YOUR_AUTH_KEY}'
+                    schema:
+                        type: string
+                -
+                    in: header
+                    name: Accept
+                    description: ''
+                    example: application/json
+                    schema:
+                        type: string
+            responses:
+                200:
+                    description: '200'
+                    content:
+                        text/plain:
+                            schema:
+                                type: string
+                                example: "{\n \"message\": \"Berhasil check in hari ini.\",\n}"
+            tags:
+                - 'Daily Check in'
     /api/categories:
         get:
             summary: 'Mendapatkan list kategori.'
@@ -962,11 +991,11 @@ paths:
                                 type: object
                                 example:
                                     status: ok
-                                    timestamp: '2021-04-30T19:52:57.389567Z'
+                                    timestamp: '2021-05-01T11:46:42.592694Z'
                                     host: 127.0.0.1
                                 properties:
                                     status: { type: string, example: ok }
-                                    timestamp: { type: string, example: '2021-04-30T19:52:57.389567Z' }
+                                    timestamp: { type: string, example: '2021-05-01T11:46:42.592694Z' }
                                     host: { type: string, example: 127.0.0.1 }
             tags:
                 - Server
